お問合せフォームの実装

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,9 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
       GOOGLE_MAPS_API_KEY: ${GOOGLE_MAPS_API_KEY}
+      TOMAIL: ${TOMAIL}
+      SMTP_USERNAME: ${SMTP_USERNAME}
+      SMTP_PASSWORD: ${SMTP_PASSWORD}
     ports:
       - "3000:3000"
     networks:
