--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,14 +4,17 @@ upstream rails_app {
 
 server {
     listen 80;
-    server_name tri-planner.com;
+    server_name tri-planner.com www.tri-planner.com;
 
+    # HTTPSのプロキシヘッダーを信頼するように設定
+    real_ip_header X-Forwarded-For;
+    set_real_ip_from 0.0.0.0/0;
     root /travel_app/public;
 
     # 静的ファイルの設定を単純化
     location /assets/ {
-        # 静的ファイルのキャッシュ設定
-        expires max;
+       # 静的ファイルのキャッシュ設定
+       expires max;
        add_header Cache-Control public;
        gzip_static on;
     
@@ -28,6 +31,6 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;  # 常にhttpsとして転送
     }
 }
